--- a/RewardsAndRecognitionBlazorApp/Pages/Nomination/Index.razor
+++ b/RewardsAndRecognitionBlazorApp/Pages/Nomination/Index.razor
@@ -302,6 +302,8 @@
 
 </style>
 
+<div class="container-lg px-3">
+
 @if (isLoading)
 {
     <div class="page-loading-spinner">
@@ -461,6 +463,8 @@
         </div>
     </div>
 }
+
+</div>
 
 @code {
     private bool IS_MANAGER;
