--- a/RewardsAndRecognitionBlazorApp/Pages/Team/Index.razor
+++ b/RewardsAndRecognitionBlazorApp/Pages/Team/Index.razor
@@ -11,7 +11,9 @@
 
 <AdminNavBar ActivePage="Teams" />
 
-<div class="user-header">
+<div class="container-lg px-3">
+
+    <div class="user-header">
     <h2><i class="bi bi-people-fill me-2"></i> Teams</h2>
 
     <div class="d-flex align-items-center gap-3 flex-wrap">
@@ -123,6 +125,8 @@
             <Pager PageNumber="PageNumber" PageSize="PageSize" TotalCount="TotalCount" PageChanged="LoadPage" />
         </div>
     }
+    </div>
+
 </div>
 
 <style>
